# ean_est_python2024

./: PLN_Tare_Joaquín_Perdomo_Artunduaga.ipynb  pyproject.toml
Cuadernos/Auxiliares/: 1.1 Preprocesamiento Texto MPP.ipynb
