[tool.poetry]
name = "proyecto-1"
version = "0.0.1"
description = "Paquetes_estadíticos"
authors = ["Joaquin"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplot = "^0.1.9"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
